--- a/fig/C/3-1a.tex
+++ b/fig/C/3-1a.tex
@@ -26,10 +26,10 @@
   {
     \draw[line width={sin(\w)},azure3!\w,rounded corners=1mm](-1.6,-1.4)--++(1.6,1.6)--++(0,0.6)--++(0.8,0.8)--++(0,-0.8);
   }
-  \node at (0,0.8)[left]{$A$};
-  \node at (0.8,1.6)[left]{$B$};
-  \node at (0,-0.8)  [right]{$D$};
-  \node at (0.8,0)[right]{$C$};
+  \node at (0,0.8)[left]{$a$};
+  \node at (0.8,1.6)[left]{$b$};
+  \node at (0,-0.8)  [right]{$d$};
+  \node at (0.8,0)[right]{$c$};
   \foreach \w in {80,60,40,20}
   {
     \draw[line width={sin(\w)},red3!\w,rounded corners=1mm](-1.2,-1.4)--++(1.2,1.2)--++(0,-0.6)--++(0.8,0.8)--++(0,0.8);
