--- a/fig/C/3-1c.tex
+++ b/fig/C/3-1c.tex
@@ -26,10 +26,10 @@
   {
     \draw[line width={sin(\w)},azure3!\w,rounded corners=1mm](-1.7,-1.9)--++(1.7,1.7)--++(0,-0.6)--++(0.8,0.8)--++(0,0.8);
   }
-  \node at (0,0.8)[left]{$D$};
-  \node at (0.8,1.6)[left]{$C$};
-  \node at (0,-0.8)  [right]{$A$};
-  \node at (0.8,0)[right]{$B$};
+  \node at (0,0.8)[left]{$d$};
+  \node at (0.8,1.6)[left]{$c$};
+  \node at (0,-0.8)  [right]{$a$};
+  \node at (0.8,0)[right]{$b$};
   \foreach \w in {80,60,40,20}
   {
     \draw[line width={sin(\w)},red3!\w,rounded corners=1mm](-1.1,-0.9)--++(1.1,1.1)--++(0,0.6)--++(0.8,0.8)--++(0,-0.8);
