--- a/fig/C/3-1d.tex
+++ b/fig/C/3-1d.tex
@@ -26,10 +26,10 @@
   {
     \draw[line width={sin(\w)},azure3!\w,rounded corners=1mm](-1.4,-1.6)--++(1.6,1.6)--++(0.6,0)--++(0.8,0.8)--++(-0.8,0);
   }
-  \node at (-0.8,0)[above]{$D$};
-  \node at (0,0.8)[above]{$C$};
-  \node at (0.8,0)  [above]{$A$};
-  \node at (1.6,0.8)[above]{$B$};
+  \node at (-0.8,0)[above]{$d$};
+  \node at (0,0.8)[above]{$c$};
+  \node at (0.8,0)  [above]{$a$};
+  \node at (1.6,0.8)[above]{$b$};
   \foreach \w in {80,60,40,20}
   {
     \draw[line width={sin(\w)},red3!\w,rounded corners=1mm](-1.2,-1.0)--++(1.0,1.0)--++(-0.6,0)--++(0.8,0.8)--++(0.8,0);
