--- a/retypeset.cls
+++ b/retypeset.cls
@@ -219,6 +219,7 @@
 \newcommand{\Uspace}{\;} % 物理单位的空格
 
 \newcommand{\Ums}{\;\text{m}/\text{s}} % m/s
+\newcommand{\Umcs}{\;\text{m}^3/\text{s}} % m^3/s （抽水量）
 \newcommand{\Ucms}{\;\text{cm}/\text{s}} % cm/s
 \newcommand{\Ucm}{\;\text{cm}} % cm
 \newcommand{\Umsq}{\;\text{m}/\text{s}^2} % m/s^2
@@ -295,6 +296,10 @@
 \newcommand{\UImA}{\;\text{mA}} % mA （电流）
 \newcommand{\UuA}{\;\mu\text{A}} % μA （电流）
 \newcommand{\UO}{\;\Omega} % Ω （电阻）
+\newcommand{\UVslashA}{\;\text{V}/\text{A}} % V/A （同电阻）
+\newcommand{\UHs}{\;\text{H}/\text{s}} % H/s （同电阻）
+\newcommand{\UsF}{\;\text{s}/\text{F}} % s/F （同电阻）
+\newcommand{\UsVC}{\;\text{s}\cdot\text{V}/\text{C}} % s·V/C （同电阻）
 \newcommand{\UkO}{\;\text{k}\Omega} % kΩ （电阻）
 \newcommand{\UMO}{\;\text{M}\Omega} % MΩ （电阻）
 \newcommand{\UOm}{\;\Omega\cdot\text{m}} % Ω·m （电阻率）
@@ -319,6 +324,7 @@
 
 %取 alone 首字母
 \newcommand{\UmsA}{\text{m}/\text{s}} % m/s
+\newcommand{\UmcsA}{\text{m}^3/\text{s}} % m^3/s （抽水量）
 \newcommand{\UcmsA}{\text{cm}/\text{s}} % cm/s
 \newcommand{\UcmA}{\text{cm}} % cm
 \newcommand{\UmsqA}{\text{m}/\text{s}^2} % m/s^2
@@ -395,6 +401,10 @@
 \newcommand{\UImAA}{\text{mA}} % mA （电流）
 \newcommand{\UuAA}{\mu\text{A}} % μA （电流）
 \newcommand{\UOA}{\Omega} % Ω （电阻）
+\newcommand{\UVslashAA}{\text{V}/\text{A}} % V/A （同电阻）
+\newcommand{\UHsA}{\text{H}/\text{s}} % H/s （同电阻）
+\newcommand{\UsFA}{\text{s}/\text{F}} % s/F （同电阻）
+\newcommand{\UsVCA}{\text{s}\cdot\text{V}/\text{C}} % s·V/C （同电阻）
 \newcommand{\UkOA}{\text{k}\Omega} % kΩ （电阻）
 \newcommand{\UMOA}{\text{M}\Omega} % MΩ （电阻）
 \newcommand{\UOmA}{\Omega\cdot\text{m}} % Ω·m （电阻率）
