--- a/fig/C/3-19b.tex
+++ b/fig/C/3-19b.tex
@@ -22,5 +22,9 @@
 \draw (2,2)to (4,2)--(4,1.2);
 \draw [fill=white](0,1.2) circle (1.5pt);  \draw [fill=white](0,0.8) circle (1.5pt);
 \draw [fill=white](4,1.2) circle (1.5pt);  \draw [fill=white](4,0.8) circle (1.5pt);
+\draw [decorate,decoration={snake,amplitude=.4mm,segment length=0.7mm,}] (0.2,0.9) -- (1,0.9);
+\draw [decorate,decoration={snake,amplitude=.4mm,segment length=1.5mm,}] (0.2,1.1) -- (1,1.1);
+\draw [decorate,decoration={snake,amplitude=.4mm,segment length=0.7mm,}] (2.1,1.3) -- (2.9,1.3);
+\draw [decorate,decoration={snake,amplitude=.4mm,segment length=1.5mm,}] (2.8,1.85) -- (3.6,1.85);
 \end{circuitikz}
 \end{document}
