--- a/fig/C/3-1b.tex
+++ b/fig/C/3-1b.tex
@@ -26,10 +26,10 @@
   {
     \draw[line width={sin(\w)},azure3!\w,rounded corners=1mm](-1.7,-1.5)--++(1.5,1.5)--++(-0.6,0)--++(0.8,0.8)--++(0.8,0);
   }
-  \node at (-0.8,0)[above]{$A$};
-  \node at (0,0.8)[above]{$B$};
-  \node at (0.8,0)  [above]{$D$};
-  \node at (1.6,0.8)[above]{$C$};
+  \node at (-0.8,0)[above]{$a$};
+  \node at (0,0.8)[above]{$b$};
+  \node at (0.8,0)  [above]{$d$};
+  \node at (1.6,0.8)[above]{$c$};
   \foreach \w in {80,60,40,20}
   {
     \draw[line width={sin(\w)},red3!\w,rounded corners=1mm](-0.9,-1.1)--++(1.1,1.1)--++(0.6,0)--++(0.8,0.8)--++(-0.8,0);
