--- a/fig/C/4-4b.tex
+++ b/fig/C/4-4b.tex
@@ -19,7 +19,7 @@
   \draw[red6,fill=white,postaction={decorate},decoration={markings,mark={at position 0.5 with {\arrow{>}}}}](1.25,0)arc(0:-180:1.25 and 0.70);
   \draw[red6,fill=white,postaction={decorate},decoration={markings,mark={at position 0.5 with {\arrow{>}}}}](1.0,0)arc(0:-180:1.0 and 0.5);
   \node at (0,1.2)[above]{$B$};
-  \node (bz) at (1.5,-1.2)[above right]{电场};
+  \node (bz) at (1.5,-1.2)[above right]{电力线};
   \draw[thin](bz.west)--++(120:1.02)(bz.west)--++(140:0.74)(bz.west)--++(160:0.55);
 \end{tikzpicture}
 \end{document}
