--- a/fig/C/5-14b.tex
+++ b/fig/C/5-14b.tex
@@ -35,5 +35,6 @@
   \draw [->](-2.3,.8)--(-2.95,1.2);
   \node at (-2.7,0)[above]{$P$};
   \draw (-1,0)[ fill=black] circle (1pt);
+  \draw (0,0)[gray,fill=gray] circle (1pt);
 \end{tikzpicture}
 \end{document}
