--- a/fig/C/5-25.tex
+++ b/fig/C/5-25.tex
@@ -21,7 +21,7 @@
   \draw[red,postaction={decorate},decoration={markings,mark=at position 0.5 with{\arrow{>}}}](2.1835,-1.8021)--(2.404,-0.775);
   \draw[red,postaction={decorate},decoration={markings,mark=at position 0.5 with{\arrow{>}}}](2.404,-0.775)--(3.249,-1.4);
   \draw[red,->](3.249,-1.4)--(3.599,-1.052);
-  \draw[thin](-45:2.85)--(-45:3.5)node[below]{外套};
-  \draw[thin](-35:2.2)--++(135:0.7)node[above]{内芯};
+  \draw[thin](-45:2.85)--(-45:3.5)node[below]{包层};
+  \draw[thin](-35:2.2)--++(135:0.7)node[above]{芯线};
 \end{tikzpicture}
 \end{document}
