--- a/fig/C/5-49.tex
+++ b/fig/C/5-49.tex
@@ -42,7 +42,8 @@
   \draw[thin](1.45,2.75)--++(135:0.8)--++(-0.3,0)node[left]{角膜};
   \draw[thin](2.0,1.42)--++(210:0.7)--++(-0.3,0)node[left]{睫状体};
   \draw[thin](6.78,0.5)--++(210:0.7)--++(-0.3,0)node[left]{视神经};
-  \draw[thin](4.95,2.72)--++(45:0.7)--++(0.3,0)node[right]{视网膜};
+  \draw[thin](4.8,3)--++(45:0.7)--++(0.3,0)node[right]{视网膜};
   \draw[thin](4.02,3.2)--++(45:1.5)--++(0.3,0)node[right]{玻璃体};
+  \draw[thin](5.25,2.3)--++(45:0.7)--++(0.3,0)node[right]{巩膜};
 \end{tikzpicture}
 \end{document}
