--- a/fig/C/5-10.tex
+++ b/fig/C/5-10.tex
@@ -72,6 +72,8 @@
   \draw[densely dashed](1.3,2)node[above]{$S'$}--(0,2);
   \node at (0,0)[right=1mm]{$A$};
   \node at (0,-0.3)[right=1mm]{$B$};
+  \node at (-1.2,-1.6)[above]{$C$};
+  \node at (-0.8,-1.8)[right]{$E$};
   \begin{scope}[xshift=-1.3cm]
     \draw(-0.1,1.6)rectangle(0.1,0.8);
     \draw(0,2)to[bend left](0.05,1.6);
