--- a/fig/C/5-19.tex
+++ b/fig/C/5-19.tex
@@ -10,12 +10,12 @@
 \begin{document}
 \small
 \begin{tikzpicture}[>=latex,scale=0.8]
-  \fill [cyan!20] (-3.5,-2.0) rectangle (3.5,0);
+  \fill [cyan!40] (-3.5,-2.0) rectangle (3.5,0);
   \draw (-3.5,0)--(3.5,0);
   \node at (3,.5){空气};
   \node at (3,-.5){玻璃};
   \draw [thin,densely dashdotted](0,-1.6)node[right]{$N'$}--(0,1.6)node[right]{$N$};	
-  \draw[semithick,postaction={decorate},decoration={markings,mark={between positions 0.25 and 0.75 step 0.5 with {\arrow{>}}}}] (150:3.5)--(0,0)--(-45:2.5)node[right]{$B$}; 
+  \draw[semithick,postaction={decorate},decoration={markings,mark={between positions 0.25 and 0.75 step 0.5 with {\arrow{>}}}}] (150:3.5)node[left]{$A$}--(0,0)--(-45:2.5)node[right]{$B$}; 
   % \draw[->, very thick] (0,0)--(-45:1.5);
   % \draw[>-, very thick](150:1.5)-- (0,0); \draw[very thick] (0,0)--(150:3.5)node[right]{$A$};
   \draw (0,.5) arc (90:150:.5)node[midway,above]{$i$};	
