--- a/fig/C/5-37a.tex
+++ b/fig/C/5-37a.tex
@@ -14,7 +14,7 @@
   \draw [dashed] (-2,0)--(2,0);
   \node at (-1.5,0)[below] {$F$};\node at (1.5,0)[below] {$F'$};
   \draw (-1.5,0) [fill=black]circle(1.5pt); \draw (1.5,0) [fill=black]circle(1.5pt);
-  \draw [->](-2,-.7)--(-1.5, -.7);
-  \draw (-1.5,-.7)--(0, -.7);
+  \draw [->](-2,.7)--(-1.5, .7);
+  \draw (-1.55,.7)--(0, .7);
 \end{tikzpicture}
 \end{document}
