--- a/fig/C/5-37d.tex
+++ b/fig/C/5-37d.tex
@@ -15,6 +15,6 @@
   \draw (-1.5,0) [fill=black]circle (1.5pt); \draw (1.5,0) [fill=black]circle(1.5pt);
   \draw [dashed] (-2,0)--(2,0);
   \draw [->](-2,.7)--(-1.75/2, .7/2);
-  \draw (-1.75/2, .7/2)--(0.25, 0);
+  \draw (-1,0.39)--(0.25, 0);
 \end{tikzpicture}
 \end{document}
