--- a/fig/C/5-56.tex
+++ b/fig/C/5-56.tex
@@ -92,6 +92,7 @@
     \draw[cyan!30!lightgray,fill=cyan!30,fill opacity=0.5](-0.3,3.1)to[bend left=15](0.3,3.1)node[right,text=black,opacity=1]{$L_2$}to[bend left=15](-0.3,3.1)--cycle;
     \draw[cyan!30!lightgray,fill=cyan!30,fill opacity=0.5](-0.8,1.5)to[bend left=10](0.8,1.5)node[right,text=black,opacity=1]{$L_3$}to[bend left=10](-0.8,1.5)--cycle;
     \draw[very thin,densely dashdotted](0,0)--(0,6);
+    \node at (0.2,6.1)[right] {灯};
   \begin{scope}[rotate=-90,scale=0.3,xshift=-19cm]
     \fill[left color=gray,right color=gray,middle color=white](-2.1,0.1)rectangle(-1.9,-0.1);
     \draw[very thin](-1.9,0.05)..controls(-1.7,0.05)and(-1.4,0.15)..(-1.3,0.15);
