--- a/fig/C/6-11b.tex
+++ b/fig/C/6-11b.tex
@@ -25,5 +25,6 @@
   \begin{scope}[canvas is zy plane at x=0]
     \draw[thick,brown](0,0)--(-12,0);
     \end{scope}
+    \draw [->] (-0.5,1.8)--(-2,1.2);
   \end{tikzpicture}
 \end{document}
