--- a/fig/C/6-12.tex
+++ b/fig/C/6-12.tex
@@ -69,11 +69,13 @@
     \hand{xscale=-1}
     \draw[thick](1,0)--++(-0.85,0);
     \fill[ball color=lightgray] (0.8,0)circle(0.2);
-    \draw[rounded corners=0.4mm]( 1.000, 0.0)--( 1.000, 0.0)--( 1.108, 0.2)--( 1.325,-0.2)--( 1.541, 0.2)--( 1.758,-0.2)--( 1.866, 0.0)--( 1.945, 0.2)--( 2.104,-0.2)--( 2.262, 0.2)--( 2.421,-0.2)--( 2.500, 0.0)--( 2.563, 0.2)--( 2.688,-0.2)--( 2.813, 0.2)--( 2.938,-0.2)--( 3.000, 0.0)--( 3.063, 0.2)--( 3.188,-0.2)--( 3.313, 0.2)--( 3.438,-0.2)--( 3.500, 0.0)--( 3.579, 0.2)--( 3.738,-0.2)--( 3.896, 0.2)--( 4.055,-0.2)--( 4.134, 0.0)--( 4.242, 0.2)--( 4.459,-0.2)--( 4.675, 0.2)--( 4.892,-0.2)--( 5.000, 0.0)--( 5.142, 0.2)--( 5.425,-0.2)--( 5.709, 0.2)--( 5.992,-0.2)--( 6.134, 0.0)--( 6.305, 0.2)--( 6.646,-0.2)--( 6.988, 0.2)--( 7.329,-0.2)--( 7.500, 0.0);
-
+    \draw[rounded corners=0.4mm]( 1.000, 0.0)--( 1.000, 0.0)--( 1.108, 0.2)--( 1.325,-0.2)--( 1.541, 0.2)--( 1.758,-0.2)--( 1.866, 0.0)--( 1.945, 0.2)--( 2.104,-0.2)--( 2.262, 0.2)--( 2.421,-0.2)--( 2.500, 0.0)--( 2.563, 0.2)--( 2.688,-0.2)--( 2.813, 0.2)--( 2.938,-0.2)--( 3.000, 0.0)--( 3.063, 0.2)--( 3.188,-0.2)--( 3.313, 0.2)--( 3.438,-0.2)--( 3.500, 0.0)--( 3.579, 0.2)--( 3.738,-0.2)--( 3.896, 0.2)--( 4.055,-0.2)--( 4.134, 0.0)--( 4.242, 0.2)--( 4.459,-0.2)--( 4.675, 0.2)--( 4.892,-0.2)--( 5.000, 0.0)--( 5.142, 0.2)--( 5.425,-0.2)--( 5.709, 0.2);
+	\fill[azure5,even odd rule](4.75,-1.5)--++(30:2.0)--++(0,2)--++(210:2.0)--cycle(5.45,-0.85)--++(30:0.3)--++(0,1.5)--++(210:0.3)--cycle;
+	\draw[rounded corners=0.4mm]( 5.709, 0.2)--( 5.992,-0.2)--( 6.134, 0.0)--( 6.305, 0.2)--( 6.646,-0.2)--( 6.988, 0.2)--( 7.329,-0.2)--( 7.500, 0.0)--( 7.688, 0.2)--( 8.063,-0.2)--( 8.438, 0.2)--( 8.813,-0.2)--( 9.000, 0.0)--( 9.187, 0.2)--( 9.562,-0.2);
   \fill[left color=darkgray,right color=lightgray](17,-0.4)rectangle(17.25,0.4);
-  \fill[azure5,even odd rule](6.75,-1.5)--++(30:2.0)--++(0,2)--++(210:2.0)--cycle(6.95,-0.5)--++(30:1.6)--++(0,0.35)--++(210:1.6)--cycle;
-  \draw[rounded corners=0.4mm]( 7.500, 0.0)--( 7.688, 0.2)--( 8.063,-0.2)--( 8.438, 0.2)--( 8.813,-0.2)--( 9.000, 0.0)--( 9.187, 0.2)--( 9.562,-0.2)--( 9.937, 0.2)--(10.312,-0.2)--(10.500, 0.0)--(10.671, 0.2)--(11.012,-0.2)--(11.354, 0.2)--(11.695,-0.2)--(11.866, 0.0)--(12.008, 0.2)--(12.291,-0.2)--(12.575, 0.2)--(12.858,-0.2)--(13.000, 0.0)--(13.108, 0.2)--(13.325,-0.2)--(13.541, 0.2)--(13.758,-0.2)--(13.866, 0.0)--(13.945, 0.2)--(14.104,-0.2)--(14.262, 0.2)--(14.421,-0.2)--(14.500, 0.0)--(14.562, 0.2)--(14.687,-0.2)--(14.812, 0.2)--(14.937,-0.2)--(15.000, 0.0)--( 15.063, 0.2)--( 15.188,-0.2)--( 15.313, 0.2)--( 15.438,-0.2)--( 15.500, 0.0)--( 15.579, 0.2)--( 15.738,-0.2)--( 15.896, 0.2)--( 16.055,-0.2)--( 16.134, 0.0)--( 16.242, 0.2)--( 16.459,-0.2)--( 16.675, 0.2)--( 16.892,-0.2)--( 17.000, 0.0);
+  \fill[azure5,even odd rule](8.75,-1.5)--++(30:2.0)--++(0,2)--++(210:2.0)--cycle(8.95,-0.5)--++(30:1.6)--++(0,0.35)--++(210:1.6)--cycle;
+  \draw[rounded corners=0.4mm]( 9.562,-0.2)--( 9.937, 0.2)--(10.312,-0.2)--(10.500, 0.0)--(10.671, 0.2)--(11.012,-0.2)--(11.354, 0.2)--(11.695,-0.2)--(11.866, 0.0)--(12.008, 0.2)--(12.291,-0.2)--(12.575, 0.2)--(12.858,-0.2)--(13.000, 0.0)--(13.108, 0.2)--(13.325,-0.2)--(13.541, 0.2)--(13.758,-0.2)--(13.866, 0.0)--(13.945, 0.2)--(14.104,-0.2)--(14.262, 0.2)--(14.421,-0.2)--(14.500, 0.0)--(14.562, 0.2)--(14.687,-0.2)--(14.812, 0.2)--(14.937,-0.2)--(15.000, 0.0)--( 15.063, 0.2)--( 15.188,-0.2)--( 15.313, 0.2)--( 15.438,-0.2)--( 15.500, 0.0)--( 15.579, 0.2)--( 15.738,-0.2)--( 15.896, 0.2)--( 16.055,-0.2)--( 16.134, 0.0)--( 16.242, 0.2)--( 16.459,-0.2)--( 16.675, 0.2)--( 16.892,-0.2)--( 17.000, 0.0);
+  %\draw[rounded corners=0.4mm]( 7.500, 0.0)--( 7.688, 0.2)--( 8.063,-0.2)--( 8.438, 0.2)--( 8.813,-0.2)--( 9.000, 0.0)--( 9.187, 0.2)--( 9.562,-0.2)--( 9.937, 0.2)--(10.312,-0.2)--(10.500, 0.0)--(10.671, 0.2)--(11.012,-0.2)--(11.354, 0.2)--(11.695,-0.2)--(11.866, 0.0)--(12.008, 0.2)--(12.291,-0.2)--(12.575, 0.2)--(12.858,-0.2)--(13.000, 0.0)--(13.108, 0.2)--(13.325,-0.2)--(13.541, 0.2)--(13.758,-0.2)--(13.866, 0.0)--(13.945, 0.2)--(14.104,-0.2)--(14.262, 0.2)--(14.421,-0.2)--(14.500, 0.0)--(14.562, 0.2)--(14.687,-0.2)--(14.812, 0.2)--(14.937,-0.2)--(15.000, 0.0)--( 15.063, 0.2)--( 15.188,-0.2)--( 15.313, 0.2)--( 15.438,-0.2)--( 15.500, 0.0)--( 15.579, 0.2)--( 15.738,-0.2)--( 15.896, 0.2)--( 16.055,-0.2)--( 16.134, 0.0)--( 16.242, 0.2)--( 16.459,-0.2)--( 16.675, 0.2)--( 16.892,-0.2)--( 17.000, 0.0);
   \end{scope}
 \end{tikzpicture}
 \end{document}
