--- a/fig/C/8-5.tex
+++ b/fig/C/8-5.tex
@@ -16,6 +16,10 @@
   }
   \node at (60:52pt) [rotate=60,above] {赖曼系（紫外线）};
   \node at (10:50pt)[rotate=10,above] {巴耳末系};
+  \node at (-5:23pt)[rotate=-6,below] {$H_\alpha$};
+  \node at (0:39pt)[rotate=0,below] {$H_\beta$};
+  \node at (5:63pt)[rotate=3,below] {$H_\gamma$};
+  \node at (10:89pt)[rotate=10,below] {$H_\delta$};
   \node at (-20:77pt)[rotate=-20,above] {帕邢系（红外线）};
   \node at (-45:87pt)[rotate=-45,above] {布喇开系};
   \node at (-60:90pt)[left] {逢德系};
