--- a/fig/C/9-11.tex
+++ b/fig/C/9-11.tex
@@ -19,7 +19,7 @@
       xtick={0,50,...,250},
       % xtick style={at={(yticklabel cs:0,5pt)}},
       ytick={0,2,...,10},
-      ylabel=比结合能/\unit{MeV},
+      ylabel=平均结合能/\unit{MeV},
       y label style={at={(0,1)},rotate=-90,anchor=south west},
       xlabel=质量数/$A$,
       x label style={at={(1,0)},anchor=south west},
