--- a/fig/C/9-14.tex
+++ b/fig/C/9-14.tex
@@ -94,5 +94,6 @@
   }
   \node at(0.75,1.75,3.7)[above]{铀棒};
   \node at(1,4,2)[left]{镉棒};
+  \node at(0.6,3,2.7)[left]{石墨};
 \end{tikzpicture}
 \end{document}
