完成C-附录校对

--- a/1/C/05.tex
+++ b/1/C/05.tex
@@ -567,57 +567,56 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
     \caption{水的视深比实深浅}\label{fig_C_5-20}
 \end{figure}
 
-\section{折射率} 
-    光从一种媒质射入另一种媒质时，入射角的正弦跟折射
-    角的正弦之比为一常数，这个规律对任何媒质都是正确的．
-    但是对不同的媒质来说，这个常数是不同的．例如，光从空气射
-    入玻璃时，这个常数约为1.50；光从空气射入水中时，这个常
-    数约为1.33．可见这个常数跟媒质有关系，是一个反映媒质
-    的光学性质的物理量，我们把它叫做媒质的\textbf{折射率}．如果用$n$
-    表示折射率，那么，
-    \[n=\frac{\sin i}{\sin r}\]
+\section{折射率}\label{sec_C_5-6}
+光从一种媒质射入另一种媒质时，入射角的正弦跟折射
+角的正弦之比为一常数，这个规律对任何媒质都是正确的．
+但是对不同的媒质来说，这个常数是不同的．例如，光从空气射
+入玻璃时，这个常数约为1.50；光从空气射入水中时，这个常
+数约为1.33．可见这个常数跟媒质有关系，是一个反映媒质
+的光学性质的物理量，我们把它叫做媒质的\textbf{折射率}．如果用$n$
+表示折射率，那么，
+\[n=\frac{\sin i}{\sin r}\]
 
-    在折射现象中，光通过两种媒质，所以折射率与两种媒质
-    有关系．
-    设光由媒质I射入媒质II，确切地说，这个折射率叫
-    做媒质II对媒质I的\textbf{相对折射率}，通常用$n_{21}$来表示．例如
-    玻璃对空气的相对折射率是1.50，水对空气的相对折射率是
-    1.33．
+在折射现象中，光通过两种媒质，所以折射率与两种媒质
+有关系．
+设光由媒质I射入媒质II，确切地说，这个折射率叫
+做媒质II对媒质I的\textbf{相对折射率}，通常用$n_{21}$来表示．例如
+玻璃对空气的相对折射率是1.50，水对空气的相对折射率是1.33．
 
-    光在不同媒质中的速度不同．研究表明，媒质的折射率
-    跟光在媒质中的速度有关系．设光在媒质I中的速度是$v_1$，
-    在媒质II中的速度是$v_2$，那么，媒质II对媒质I的相对折射
-    率$n_{21}$
-    等于$v_1$与$v_2$之比，即
+光在不同媒质中的速度不同．研究表明，媒质的折射率
+跟光在媒质中的速度有关系．设光在媒质I中的速度是$v_1$，
+在媒质II中的速度是$v_2$，那么，媒质II对媒质I的相对折射
+率$n_{21}$
+等于$v_1$与$v_2$之比，即
 \[n_{21}=\frac{v_1}{v_2} \]
 
-    光在每种媒质中的速度是一定的，所以光从一种媒质射
-    入另一种媒质时折射率是一个常数．
+光在每种媒质中的速度是一定的，所以光从一种媒质射
+入另一种媒质时折射率是一个常数．
 
-    光从真空射入某种媒质时的折射率，叫做该种媒质的\textbf{绝
-    对折射率}．
-    通常用$n$表示．以后我们提到某种媒质的折射率
-    时，就是指这种媒质的绝对折射率．
-    设光在某种媒质中的速
-    度为$v$，由于真空中的光速为$c$，所以这种媒质的绝对折射率
+光从真空射入某种媒质时的折射率，叫做该种媒质的\textbf{绝
+对折射率}．
+通常用$n$表示．以后我们提到某种媒质的折射率
+时，就是指这种媒质的绝对折射率．
+设光在某种媒质中的速
+度为$v$，由于真空中的光速为$c$，所以这种媒质的绝对折射率
 \[n=\frac{c}{v} \]
 
-    光在真空中的速度大于在任何其他媒质中的速度，所以
-    媒质的绝对折射率都大于1．表~\ref{tab_C_5-2} 是一些媒质的绝对折射率．
-    \begin{table}[htbp]
-    	\centering
-    	\caption{}\label{tab_C_5-2}
-        \begin{tblr}{colspec={cc|cc},cell{2-Z}{2,4}={mode=math}}
-	        \toprule
-	         媒质 & 折射率 & 媒质 & 折射率\\
-	        \midrule
-			  金刚石  &  2.42 &  水晶   & 1.54\\
-			  玻璃   &   1.5 \sim 1.9  &  酒精  &  1.36 \\
-			  二硫化碳  & 1.63  &  乙醚  &  1.35\\
-			  岩盐  &  1.54  &  水   &  1.33\\ 
-	        	\bottomrule
-            \end{tblr}
-        \end{table}
+光在真空中的速度大于在任何其他媒质中的速度，所以
+媒质的绝对折射率都大于1．表~\ref{tab_C_5-2} 是一些媒质的绝对折射率．
+\begin{table}[htbp]
+   	\centering
+   	\caption{}\label{tab_C_5-2}
+    \begin{tblr}{colspec={cc|cc},cell{2-Z}{2,4}={mode=math}}
+		\toprule
+		媒质 & 折射率 & 媒质 & 折射率\\
+		\midrule
+		金刚石  &  2.42 &  水晶   & 1.54\\
+		玻璃   &   1.5 \sim 1.9  &  酒精  &  1.36 \\
+		二硫化碳  & 1.63  &  乙醚  &  1.35\\
+		岩盐  &  1.54  &  水   &  1.33\\ 
+		\bottomrule
+   \end{tblr}
+\end{table}
 
 空气中的光速跟真空中的光速相差很少，可以认为空气
 中的光速等于真空中的光速．因此，空气的绝对折射率可以
@@ -1308,7 +1307,7 @@ $AE$、$BD$经过凸透镜折射后的传播方向．
 \end{figure}
 \end{enumerate}
 
-\section{透镜成像公式}
+\section{透镜成像公式}\label{sec_C_5-12}
 
 \subsection{透镜成像公式}
 
