--- a/fig/C/10-1.tex
+++ b/fig/C/10-1.tex
@@ -72,6 +72,9 @@
   \fill[darkgray](0.21,2.62)--(0.21,2.5)--(1.4,3.13)--(1.4,3.25)--cycle;
   \node at (0.16,-0.18) [below left,inner sep=1pt]{$A$};
   \node at (0.84,0.18) [below right,inner sep=1pt]{$B$};
+   \node at (-2.3,-0.2) [above]{$K$};
+   \node at (-1.8,3.1) [above]{$+$};
+   \node at (-3.3,3) [above]{$-$};
   \draw( 0.330,2.710)..controls(-0.904,2.710)and(-1.506,2.218)..(-1.000,0.200);
   \posthead{xshift=0.33cm,yshift=2.71cm}
   \posthead{xshift=0.67cm,yshift=2.89cm}
