--- a/fig/C/10-12.tex
+++ b/fig/C/10-12.tex
@@ -55,5 +55,9 @@
 \draw[double=brown8,brown!50!black](2.7,2.264)--(2.8,2.5)arc(180:0:0.02);
 \draw[double=brown8,brown!50!black](2.85,2.282)--(2.85,2.0314);
 \draw(2.0,-0.25)--(2.0,-0.6);
+\node at (2.7,2.7) {$A$};
+\node at (1.15,2.7) {$B$};
+\node at (-1.5,1.95) {$C$};
+\node at (1.6,1.2) {$D$};
 \end{tikzpicture}
 \end{document}
