修正加粗和波浪线相关内容

--- a/1/A/02.tex
+++ b/1/A/02.tex
@@ -229,7 +229,7 @@ $x_0=0$．这时质点的位移就可以用末位置的坐标来表示：
 这列火车所做的运动就是\textbf{匀速直线运动}．
 
 \textit{物体在一条直线上运动，如果在相等时间里的位移相等，
-这种运动就叫做匀速直线运动}．匀速直线运动有时简称为\textit{匀速运动}．
+这种运动就叫做匀速直线运动}．匀速直线运动有时简称为\textbf{匀速运动}．
 
     飞机在天空中匀速飞行，轮船在海洋上匀速航行，它们的
 运动虽然都是匀速运动，但还是有区别的．在相同的时间里，
@@ -428,8 +428,7 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 是不相等的．火车进站的时候，运动越来越慢，在相等时间里
 的位移也是不相等的．
 
-物体在一条直线上运动，如果在相等时间里的位移不相等，这种运动就叫做\textbf{变速直线运动}．变速直线运动有时简称
-为\textbf{变速运动}．
+\textit{物体在一条直线上运动，如果在相等时间里的位移不相等，这种运动就叫做\textbf{变速直线运动}}．变速直线运动有时简称为\textbf{变速运动}．
 
 \subsection{平均速度}
 
@@ -440,8 +439,8 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 火车在这半小时内是匀速运动的，这样它的速度就是$56 \Ukmh$．这个$56 \Ukmh$，就是火车在这半个小时内的\textbf{平
 均速度}．
 
-在变速直线运动中，运动物体的位移和所用时间的比值，
-叫做这段时间里的平均速度．
+\textit{在变速直线运动中，运动物体的位移和所用时间的比值，
+叫做这段时间里的平均速度}．
 如果用$\bar v$来表示平均速度，那么
 \[\bar v=\frac{s}{t}\]
 
@@ -531,9 +530,9 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 动方式在自然界中是的确存在的．这种运动，就是我们现在
 要研究的匀变速直线运动．
 
-在一条直线上运动的物体，如果在相等的时间里速度的
+\textit{在一条直线上运动的物体，如果在相等的时间里速度的
 变化相等，
-物体的运动就叫做\textbf{匀变速直线运动}，或者简称为\textbf{匀变速运动}．
+物体的运动就叫做\textbf{匀变速直线运动}}，或者简称为\textbf{匀变速运动}．
 
 举例来说，一个做直线运动的物体，在某一时刻它的速度
 是3$\Ums$，过了1秒钟变成4$\Ums$，再过1秒钟变成5$\Ums$，
@@ -564,8 +563,8 @@ $\Delta s/\Delta t$叫做直线的\textbf{斜
 的变化跟发生这个变化所用的时间的比值是一个恒量，不随
 时间而改变．这个比值越大，表示速度变化得越快．
 
-在匀变速直线运动中，速度的变化和所用的时间的比值，
-叫做匀变速直线运动的加速度．
+\textit{在匀变速直线运动中，速度的变化和所用的时间的比值，
+叫做匀变速直线运动的加速度}．
 
 用$v_0$表示运动物体开始时刻的速度（初速度），用$v_t$表
 示经过一段时间$t$的速度（末速度），用$a$表示加速度，那么，
