--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -133,11 +133,11 @@
 列车出站时，由于受到机车牵引力的作用，由静止开始运动，并且速度不断增大；列车进站时，由于受到阻力的作用，速
 度不断减小，最后停下来．
 抛出的手榴弹，射出的炮弹，由于受到重力的作用，速度的方向不断改变而做曲线运动．
-可见，物体的运动状态发生改变，一定是受到外力作用的结果；力是物体运动状态发生改变的原因．物体的运动状态发生改变时，速度的大小和方向发生改变，有了加速度．由此得到结论：\textbf{力是使物体产生加速度的原因}．
+可见，物体的运动状态发生改变，一定是受到外力作用的结果；力是物体运动状态发生改变的原因．物体的运动状态发生改变时，速度的大小和方向发生改变，有了加速度．由此得到结论：\textit{力是使物体产生加速度的原因}．
 
 物体运动状态的改变，不但跟物体所受的外力有关，而且跟物体本身的性质有关．
 一辆空车和一辆装满货物的车，在相同牵引力的作用下，空车用较短的时间可以达到某一速度，装满货物的车要较长的时间才能达到相同的速度．空车的质量小，产生的加速度大；装满货物的车质量大，产生的加速度小．这说明，质量不同的物体，它们的运动状态的改变的难易程度并不相同，或者说它们的惯性的大小并不相同．在外力相同的情况下，质量大的物体得到的加速度小，它的运动状态难改变，惯性大；质量小的物体得到的加速度大，它的运动状态容易改变，惯性小．
-这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大．\textbf{质量是物体惯性大小的量度}．
+这样，我们看到质量在动力学中所起的作用，质量越大，物体的惯性就越大．\textit{质量是物体惯性大小的量度}．
 
 \begin{figure}[htp]
     \centering
@@ -223,7 +223,7 @@
 
 总起来说，结论是：
 
-\textbf{对质量相同的物体来说，物体的加速度跟物体所受的外力成正比；加速度的方向和外力的方向相同}．加速度的大小和力的大小的关系，写成公式就是
+\textit{对质量相同的物体来说，物体的加速度跟物体所受的外力成正比；加速度的方向和外力的方向相同}．加速度的大小和力的大小的关系，写成公式就是
 \[\frac{a_1}{a_2}=\frac{F_1}{F_2} \]
 或者
 \[a\propto F\]
@@ -290,7 +290,7 @@
 实验的数据，作出$a-1/m$图象．你得到的图象是一条直线吗？
 
 
-我们从实验中得到的结论是：\textbf{在相同外力作用下，加速度跟质量成反比}．写成公式就是
+我们从实验中得到的结论是：\textit{在相同外力作用下，加速度跟质量成反比}．写成公式就是
 \[\frac{a_1}{a_2}=\frac{m_2}{m_1} \]
 或者
 \[a\propto \frac{1}{m} \]
@@ -526,7 +526,7 @@
 
 可见物理公式在确定物理量的数量关系的同时，也确定
 了物理量的单位关系．因此，我们可以选定几个物理量的单
-位作为基本单位，根据物理公式中其他物理量和这几个物理
+位作为\textbf{基本单位}，根据物理公式中其他物理量和这几个物理
 量的关系，推导出其他物理量的单位．例如选定位移的单位
 （米）和时间的单位（秒），利用公式$v=s/t$
 可以推导出速度的单
