--- a/1/A/04.tex
+++ b/1/A/04.tex
@@ -49,7 +49,7 @@
 我们知道，速度是个矢量，既有大小，又有方向，不论速度
 的大小是否改变，只要速度的方向发生改变，就表示速度矢量
 发生了变化，也就是具有加速度．曲线运动中速度的方向时
-刻在改变，所以\textbf{曲线运动是变速运动}．
+刻在改变，所以\textit{曲线运动是变速运动}．
 
 \subsection{物体做曲线运动的条件}
 
@@ -151,7 +151,7 @@ v_y&=v\sin 30^{\circ}=150\Ukmh\\
 \section{平抛物体的运动}
 \subsection{平抛物体的运动} 
 
-将物体用一定的初速度沿水平方向抛出去，物体所做的运动叫做平抛运动．把桌上的小球打一下，使它有一个水平的初速度离开桌面，小球离开桌面后所做的曲线运动就是平抛运动．在平抛运动中，物体受到跟速度方向成角度的重力（不考虑空气阻力），所以做曲线运动．
+将物体用一定的初速度沿水平方向抛出去，物体所做的运动叫做\textbf{平抛运动}．把桌上的小球打一下，使它有一个水平的初速度离开桌面，小球离开桌面后所做的曲线运动就是平抛运动．在平抛运动中，物体受到跟速度方向成角度的重力（不考虑空气阻力），所以做曲线运动．
 
 \begin{figure}[htbp]
     \centering
@@ -705,7 +705,7 @@ $F^{\prime}=0$，即外轨与轮缘不相互挤压．
 \end{figure}
 
 
-\textit{做匀速圆周运动的物体，在合外力突然消失或者合外力不足以提供所需的向心力时将做逐渐远离圆心的运动，这种运动叫做离心运动．}
+\textit{做匀速圆周运动的物体，在合外力突然消失或者合外力不足以提供所需的向心力时将做逐渐远离圆心的运动，这种运动叫做\textbf{离心运动}}．
 
 \subsection{离心机械}
 
