--- a/1/A/07.tex
+++ b/1/A/07.tex
@@ -34,7 +34,7 @@
 当$\alpha=0$时，$\cos\alpha=1$，$W=Fs$，这就是初中学过的公式．当$\alpha=\pi/2$时，$\cos\alpha=0$，$W=0$，表示力的方向与位移方向垂直时，力不做功．
 
 功是由力的大小和位移的大小确定的，它没有方向，是一个标量．
-在国际单位制中，功的单位是焦耳，简称焦，国际符号是$\UJA$．
+在国际单位制中，功的单位是\textbf{焦耳}，简称焦，国际符号是$\UJA$．
 1焦就是1牛的力使物体在力的方向上发生1米位移所做的功．
 \[1 \UJ=1 \UN \times 1 \Um=1 \UNm \]
 
@@ -65,7 +65,7 @@ $\cos\alpha>0$，$W>0$，即力对物体做正功．人推车前进的时候，$
     \item 在起重机的钢绳上挂着重物，当重物静止时，钢绳的拉力有没有做功？重力有没有做功？
 
     在水平桌面上滚动的小球，桌面对球的支持力有没有做功？重力有没有做功？
-    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做尔格（$\UergA$）．1尔格是1达因（$\Udyn$）的力使物体在力的方向上发生1厘米的位移所做的功．
+    \item 在厘米$\cdot$克$\cdot$秒制中，功的单位叫做\textbf{尔格}（$\UergA$）．1尔格是1达因（$\Udyn$）的力使物体在力的方向上发生1厘米的位移所做的功．
     试证明：
     \[1 \UJ=10^7 \Uerg \]
     \item 在水平道路上匀速前进的汽车受到哪些力的作用？其中哪些力做功，哪些力没有做功？哪个力做正功，哪个力做负功？
