--- a/1/A/08.tex
+++ b/1/A/08.tex
@@ -10,12 +10,12 @@
 $v=at=Ft/m$．由此得到
 \[Ft=mv\]
 
-可见，要使原来静止的某物体获得某一速度，可以有不同的方法，既可以用较大的力作用较短的时间，也可以用较小的力作用较长的时间；只要力和力的作用时间的乘积$Ft$相同，这个物体总得到相同的速度．这就是说，对一定质量的物体，力所产生的改变物体速度的效果，是由$Ft$这个物理量决定的，在物理学中，力和力的作用时间的乘积$Ft$叫做力的\textbf{冲量}．
+可见，要使原来静止的某物体获得某一速度，可以有不同的方法，既可以用较大的力作用较短的时间，也可以用较小的力作用较长的时间；只要力和力的作用时间的乘积$Ft$相同，这个物体总得到相同的速度．这就是说，对一定质量的物体，力所产生的改变物体速度的效果，是由$Ft$这个物理量决定的，在物理学中，\textit{力和力的作用时间的乘积$Ft$叫做力的\textbf{冲量}}．
 
 冲量是个矢量，它的方向由力的方向决定．如果在作用时
 间内力的方向不变，冲量的方向就是力的方向．冲量的单位由力和时间的单位决定，在国际单位制里，冲量的单位是$\UNsA$．
 
-从上式还可以看出，原来静止的不同的物体，在相同冲量的作用下，它们得到的速度不同，质量大的物体得到的速度小，质量小的物体得到的速度大，但是它们的质量和速度的乘积$mv$却是相同的，都等于它们受到的冲量．在物理学中，质量和速度的乘积$mv$叫做\textbf{动量}．
+从上式还可以看出，原来静止的不同的物体，在相同冲量的作用下，它们得到的速度不同，质量大的物体得到的速度小，质量小的物体得到的速度大，但是它们的质量和速度的乘积$mv$却是相同的，都等于它们受到的冲量．在物理学中，\textit{质量和速度的乘积$mv$叫做\textbf{动量}}．
 
 动量常用符号$p$表示．
 动量也是矢量，它的方向就是速度的方向．在国际单位制中，动量的单位是$\UkgmsA$．
