--- a/1/A/09.tex
+++ b/1/A/09.tex
@@ -14,7 +14,7 @@
 
 \subsubsection{产生振动的条件} 
 
-物体（或者物体的一部分）在平衡位置附近来回做往复运动，叫做\textbf{机械振动}，常常简称为振动．挂在弹簧下端的重物的上下振动（图~\ref{fig_A_9-1}），单摆的小球的左右摆动，是振动的典型例子．
+\textit{物体（或者物体的一部分）在平衡位置附近来回做往复运动，叫做\textbf{机械振动}}，常常简称为振动．挂在弹簧下端的重物的上下振动（图~\ref{fig_A_9-1}），单摆的小球的左右摆动，是振动的典型例子．
 
 \begin{figure}[htbp]
 	\centering
@@ -46,7 +46,7 @@
 但是振动有它自己的特点，需要引入新的物理量来表示这种特点．
 至于怎样确定振动物体在任一时刻的位置和速度，因为计算比较复杂，本书就不讲了．
 
-振动是一种往复运动，振动物体的位移不像匀速或变速直线运动那样可以继续增大下去，而是有一个最大位移，否则就不成其为振动了．振动物体离开平衡位置的最大距离叫做\textbf{振幅}．图9.1中振动的振幅就等于$OB$或$OC$．振幅是表示振动幅度的大小或振动强弱的物理量．
+振动是一种往复运动，振动物体的位移不像匀速或变速直线运动那样可以继续增大下去，而是有一个最大位移，否则就不成其为振动了．\textit{振动物体离开平衡位置的最大距离叫做\textbf{振幅}}．图~\ref{fig_A_9-1} 中振动的振幅就等于$OB$或$OC$．振幅是表示振动幅度的大小或振动强弱的物理量．
 
 
 
@@ -54,11 +54,11 @@
 振动的最大特点是重复性，或者说周期性．
 所谓周期性，就是振动物体的位移和速度经过一定时间之后又重复地回到原来的数值．例如在图~\ref{fig_A_9-1} 中，振动物体由$B$点经过$O$到达$C$点，再经过$O$回到$B$点，即完成一次全振动，位移和速度就
 重复地回到原来的数值．
-完成一次全振动经过的时间叫做\textbf{周期}．
+\textit{完成一次全振动经过的时间叫做\textbf{周期}}．
 周期是表示振动快慢的物理量．
 
 振动的快慢也可以用频率来表示．
-在1秒内完成全振动的次数叫做\textbf{频率}．
+\textit{在1秒内完成全振动的次数叫做\textbf{频率}}．
 频率的单位是\textbf{赫兹}，简称赫，国际符号是Hz．
 1秒钟振动1次就是1赫．1秒钟振动$n$次就是$n$赫．
 
@@ -111,17 +111,17 @@
 \[F=-kx\]
 式中$k$是比例常数，对于弹簧振子来说，就等于弹簧的倔强系数．式中的负号表示回复力的方向跟位移的方向相反．
 
-这种在跟对平衡位置的位移成正比而方向相反的回复力
-作用下的振动，叫做\textbf{简谐振动}．
+这种\textit{在跟对平衡位置的位移成正比而方向相反的回复力
+作用下的振动，叫做\textbf{简谐振动}}．
 
 用$m$代表振子的质量，用$a$代表振子的加速度，根据牛顿
 第二定律$F=ma$ 可以得到
 \[a=-\frac{k}{m}x\]
 
-上式表明，在简谐振动中，加速度也跟位移成正比而方向相反．在图~\ref{fig_A_9-2} 里，当振子从$O$向右运动时，加速度的方向向左，并且随着位移增大而增大，即振子做变减速运动．
-到速度减小到零时，振子运动到右端最大位移处$B$，加速度也增大到最大值．振子从$B$向$O$运动的过程中，加速度的方向仍向左，并且随位移的减小而减小，即振子做初速度为零的变加速运动．当振子回到$O$点时，位移减小到零，加速度也减小到零，而速度增大到最大值，方向向左．由于惯性，振子就以这个速度继续向左运动，在越过$O$点以后，加速度的方向向右，
-并且随位移的增大而增大，振子做变减速运动．
-到速度减小到零时，振子运动到左端最大位移处$C$，加速度也增大到最大值．然后振子从$C$向右运动，加速度的方向仍向右，并且随位移的减小而减小，即振子做初速度为零的变加速运动．当振子回到$O$点时，位移、加速度都减小到零，而速度增大到最大值，方向向右．此后将重复上述的过程．
+上式表明，在简谐振动中，加速度也跟位移成正比而方向相反．在图~\ref{fig_A_9-2} 里，当振子从$O$向右运动时，加速度的方向向左，并且随着位移增大而增大，即振子做\textit{变减速}运动．
+到速度减小到零时，振子运动到右端最大位移处$B$，加速度也增大到最大值．振子从$B$向$O$运动的过程中，加速度的方向仍向左，并且随位移的减小而减小，即振子做初速度为零的\textit{变加速}运动．当振子回到$O$点时，位移减小到零，加速度也减小到零，而速度增大到最大值，方向向左．由于惯性，振子就以这个速度继续向左运动，在越过$O$点以后，加速度的方向向右，
+并且随位移的增大而增大，振子做\textit{变减速}运动．
+到速度减小到零时，振子运动到左端最大位移处$C$，加速度也增大到最大值．然后振子从$C$向右运动，加速度的方向仍向右，并且随位移的减小而减小，即振子做初速度为零的\textit{变加速}运动．当振子回到$O$点时，位移、加速度都减小到零，而速度增大到最大值，方向向右．此后将重复上述的过程．
 
 值得注意的是，在简谐振动中速度与加速度的变化不一样，加速度最大时速度等于零，加速度等于零时速度最大．
 
@@ -390,7 +390,7 @@
 
 图~\ref{fig_A_9-14} 的曲线表示出了受迫振动的振幅$A$跟策动力频率$f$的关系：策动力的频率$f$等于振动物体的固有频率$f_{\text{固}}$时振幅最大；策动力的频率跟固有频率相差越大，振幅越小．
 
-\textit{当策动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做共振．}
+\textit{当策动力的频率跟物体的固有频率相等的时候，受迫振动的振幅最大，这种现象叫做\textbf{共振}．}
 
 共振，每个推过秋千的人都有这种经验．秋千是个摆，有
 它的固有频率．轻推一下使它微微摆动以后，只要按着它的固有频率周期性地施加推力，每当它往回摆时轻轻推它一下，尽管每次的推力都很小，经过一段时间，秋千也会荡得很高，即发生共振．
@@ -427,7 +427,7 @@
 水波是在水中传播的，空气中的声波是在空气中传播的，地震波是在地壳中传播的．借以传播波的物质常常叫做媒质．波要靠媒质来传播，这是机械波的特点．
 
 
-波为什么会在媒质中传播呢？原来媒质的各部分之间存在着相互作用力，如果媒质的某一部分发生了振动，那么，由于它对周围其他部分有力的作用，就带动周围各部分振动起来．同样，周围各部分又带动较远的各部分振动起来．这样，振动在媒质内不会局限在一个地方，而要在媒质内传播出去．\textit{机械振动在媒质中的传播叫做机械波}．在力学里提到波，通常就是指机械波．
+波为什么会在媒质中传播呢？原来媒质的各部分之间存在着相互作用力，如果媒质的某一部分发生了振动，那么，由于它对周围其他部分有力的作用，就带动周围各部分振动起来．同样，周围各部分又带动较远的各部分振动起来．这样，振动在媒质内不会局限在一个地方，而要在媒质内传播出去．\textit{机械振动在媒质中的传播叫做\textbf{机械波}}．在力学里提到波，通常就是指机械波．
 
 现在稍微细致地看一下机械振动在媒质中是怎样传播的．
 
@@ -468,9 +468,9 @@
 
 按照质点振动方向与波的传播方向之间的关系，可以把波分成横波和纵波．
 
-\textit{振动方向与波的传播方向垂直的波叫做横波}．图~\ref{fig_A_9-15} 所示绳子上的波是横波的例子，质点上下振动，波向右传播，这两个方向互相垂直．
+\textit{振动方向与波的传播方向垂直的波叫做\textbf{横波}}．图~\ref{fig_A_9-15} 所示绳子上的波是横波的例子，质点上下振动，波向右传播，这两个方向互相垂直．
 
-\textit{振动方向与波的传播方向在同一直线上的波叫做纵波}．
+\textit{振动方向与波的传播方向在同一直线上的波叫做\textbf{纵波}}．
 图~\ref{fig_A_9-16} 所示沿弹簧传播的疏密波是纵波的例子，质点左右振动，波向右传，这两个方向在同一直线上．
 \begin{figure}[htbp]
     \centering
@@ -703,7 +703,7 @@
     \caption{水波的干涉图样}\label{fig_A_9-23}
 \end{figure}
 
-\textit{频率相同的两列波叠加，使某些区域的振动加强，某些区域的振动减弱，并且振动加强和振动减弱的区域互相间隔，这种现象叫}\textbf{波的干涉}，形成的图样叫\textbf{干涉图样}．
+\textit{频率相同的两列波叠加，使某些区域的振动加强，某些区域的振动减弱，并且振动加强和振动减弱的区域互相间隔，这种现象叫\textbf{波的干涉}}，形成的图样叫\textbf{干涉图样}．
 
 \textit{不仅水波，一切波都能发生干涉，干涉是波特有的现象．}
 
@@ -715,7 +715,7 @@
 
 微风激起的水波，遇到突出水面的小石、芦苇，会绕过它们，继续传播，好像它们并不存在．在水波演示槽的水里放一个小障碍物，可以清楚地看到水波能绕过障碍物而继续传播．
 
-\textit{波绕过障碍物的现象，叫做}\textbf{波的衍射}．
+\textit{波绕过障碍物的现象，叫做\textbf{波的衍射}}．
 
 是不是任何条件下都能发生波的衍射呢？
 \begin{figure}[htbp]
@@ -1093,8 +1093,8 @@ $10^{-12} \UWmq $
 
 图~\ref{fig_A_9-33b} 是频率为100赫的钢琴声的波形曲线．
 用专门分析声音的仪器进行分析，发现它是由16个频率不同的简
-谐波组成的．这些频率成整数倍，其中频率最低的声音叫基
-音，频率是100赫，其余的叫泛音，频率分别为200赫、300赫
+谐波组成的．这些频率成整数倍，其中频率最低的声音叫\textbf{基音}，
+频率是100赫，其余的叫\textbf{泛音}，频率分别为200赫、300赫
 等等．图~\ref{fig_A_9-33a} 表示出了这16个简谐波的频率和振幅，这
 样的图叫声谱．
 图~\ref{fig_A_9-34} 是频率为100赫的黑管声的波形曲
