--- a/1/B/01.tex
+++ b/1/B/01.tex
@@ -300,7 +300,7 @@
 但是微粒的布朗运动的无规则性，却反映了液体内部分子运动的无规则性．
 
 实验表明，布朗运动随着温度的升高而愈加微烈．在扩散现象中，也是温度越高，扩散进行得越快．
-这表示分子的无规则运动跟温度有关系，温度越高，分子的无规则运动越激烈．正因为分子的无规则运动跟温度有关系，所以通常把分子的这种运动叫做热运动．
+这表示分子的无规则运动跟温度有关系，温度越高，分子的无规则运动越激烈．正因为分子的无规则运动跟温度有关系，所以通常把分子的这种运动叫做\textbf{热运动}．
 
 
 \subsection*{练习二}
