--- a/1/B/04.tex
+++ b/1/B/04.tex
@@ -72,7 +72,7 @@
 如果整个物体就是一个晶体，这样的物体就叫做\textbf{单晶体}．
 上面说的晶体就是指单晶体．单晶体是科学技术上的重要原材料，制造各种晶体管就要用纯度很高的单晶硅或单晶锗．
 
-如果整个物体是由许多杂乱无章地排列着的小晶体（晶粒）组成的，这样的物体就叫做\textbf{多晶体}．平常见到的\textbf{各种金属材料就是多晶体}．
+如果整个物体是由许多杂乱无章地排列着的小晶体（晶粒）组成的，这样的物体就叫做\textbf{多晶体}．平常见到的各种金属材料就是多晶体．
 把纯铁做成的样品放在显微镜下观察，可以
 看到它是由许许多多晶粒组成的．晶粒有大有小，最小的只有$10^{-5}$厘米那样大，最大的也超不过$10^{-3}$厘米．每个晶粒都是一个小单晶体，具有各向异性．由于晶粒在多晶体里杂乱无章地排列着，所以多晶体没有规则的几何形状，也不显示各向异性，它在不同方向上的物理性质是相同的，即各向同性．
 
