--- a/1/B/05.tex
+++ b/1/B/05.tex
@@ -443,7 +443,7 @@
 空气湿度对蒸发的快慢、植物的枯萎、动物的感觉的影响不是由空气的绝对湿度来决定，而是跟空气中的水蒸气离饱和状态的远近有关系．由于饱和水蒸气的压强随温度的升高而增大，所以在空气的绝对湿度一定的情况下，气温高时，水蒸气离饱和状态远；气温低时，水蒸气离饱和状态近．例如空气
 的绝对湿度是9毫米汞柱，在气温是20$\Ucede$时，水蒸气离饱和状态较远（20$\Ucede$时水的饱和汽压是17.5毫米汞柱），我们就感到空气比较干燥；在气温是10$\Ucede$时，水蒸气接近饱和（10$\Ucede$时水的饱和汽压是9.2毫米汞柱），我们就感到空气很潮湿．为了表示空气中水蒸气离饱和状态的远近，物理学中引入了相对湿度的概念．
 
-某温度时空气的绝对湿度跟同一温度下水的饱和汽压的百分比，叫做这时空气的\textbf{相对湿度}．
+\textit{某温度时空气的绝对湿度跟同一温度下水的饱和汽压的百分比，叫做这时空气的\textbf{相对湿度}}．
 
 如果气温为20$\Ucede$时绝对湿度$p=9$毫米汞柱，因为20$\Ucede$时水的饱和汽压$P=17.5$毫米汞柱，所以这时空气的相对湿度
 \[B=\frac{9}{17.5}\times 100\%=51\% \]
