--- a/1/B/06.tex
+++ b/1/B/06.tex
@@ -310,8 +310,8 @@ $A$点跟$Q$的距离为$r_1$，从库仑定律知道$F_A=kQq/r^2_1$．同样，
 对任何电场都是适用的．这就是说，对任何电场，都要用上述
 比值来表示电场的强弱．
 
-放入电场中某一点的电荷受到的电场力跟它的电量的比
-值，叫做这一点的\textbf{电场强度}，简称为\textbf{场强}．跟力一样，电场强
+\textit{放入电场中某一点的电荷受到的电场力跟它的电量的比
+值，叫做这一点的\textbf{电场强度}}，简称为\textbf{场强}．跟力一样，电场强
 度也是矢量，如果用$E$表示电场强度，用$F$表示检验电荷$q$受
 到的电场力，那么
 \begin{equation}\label{eq_B-6-3}
@@ -1039,8 +1039,8 @@ $qU_A$，在$B$点的电势能是$qU_B$，由于$U_A>U_B$，把正电荷$q$从$A
 仍然等于$qU_{AB}$；如果是把负电荷$-q$从$B$点移到$A$点，电场
 力要做正功，功的大小仍然是$qU_{AB}$．
 
-所以，在电场中$A$、$B$两点间移动电荷时，电场力做的功
-$W$等于电量$q$和这两点间的电势差$U$的乘积，即
+所以，\textit{在电场中$A$、$B$两点间移动电荷时，电场力做的功
+$W$等于电量$q$和这两点间的电势差$U$的乘积}．即
 \[W=qU\]
 式中$q$用库作单位，$U$用伏作单位，$W$用焦作单位．
 利用这个
