--- a/1/C/01.tex
+++ b/1/C/01.tex
@@ -286,7 +286,7 @@
 这个比值越大的地方，表示一定长度的通电导线受到的磁场力越大，即那里的磁场越强．
 因此我们可以用这个比值来表示磁场的强弱．
 
-\textit{在磁场中垂直于磁场方向的通电导线，所受的磁场力$F$跟电流强度$I$和导线长度$\ell$的乘积$I\ell$的比值叫做通电导线所在处的磁感应强度}\footnote{这个物理量所以叫做磁感应强度，而没有叫做磁场强度，是由于历史上磁场强度一词已用来表示另外一个物理量．}．如果用$B$表示磁感应强度，那么，
+\textit{在磁场中垂直于磁场方向的通电导线，所受的磁场力$F$跟电流强度$I$和导线长度$\ell$的乘积$I\ell$的比值叫做通电导线所在处的\textbf{磁感应强度}}\footnote{这个物理量所以叫做磁感应强度，而没有叫做磁场强度，是由于历史上磁场强度一词已用来表示另外一个物理量．}．如果用$B$表示磁感应强度，那么，
 \[B=\frac{F}{I\ell}\]
 
 磁感应强度是一个矢量，它的大小如上式所示，它的方向
@@ -315,7 +315,7 @@
 
 \section{磁通量}
 在电学和电工学里常常要讨论穿过某一个面的磁场．为此需要引入一个新的物理量——磁通量，在下一章里就要用到它．
-设在匀强磁场中有一个与磁场方向垂直的平面（图~\ref{fig_C_1-17}），磁场的磁感应强度为$B$，平面的面积为$S$．我们定义磁感应强度$B$与面积$S$的乘积，叫做穿过这个面的\textbf{磁通量}（简称磁通）．
+设在匀强磁场中有一个与磁场方向垂直的平面（图~\ref{fig_C_1-17}），磁场的磁感应强度为$B$，平面的面积为$S$．我们定义\textit{磁感应强度$B$与面积$S$的乘积，叫做穿过这个面的\textbf{磁通量}}（简称磁通）．
 如果用$\phi$表示磁通量，那么
 \[\phi=BS \]
 
