--- a/1/C/05.tex
+++ b/1/C/05.tex
@@ -210,10 +210,10 @@ $$c=299792458\Ums$$
 我们在初中学过，光的反射遵守下面的\textbf{反射定律}（图~\ref{fig_C_5-7}）：
 
 
-（1）反射光线跟入射光线和法线在同一平面上，反射光
-线和入射光线分居在法线的两侧；
+（1）\textit{反射光线跟入射光线和法线在同一平面上，反射光
+线和入射光线分居在法线的两侧}；
 
-（2）反射角等于入射角．
+（2）\textit{反射角等于入射角}．
 
 
 根据光的反射定律，如果使光线沿着反射光线的路径射
@@ -540,10 +540,10 @@ $P$的直线叫做主光轴，简称主轴．靠近主轴射向镜面的光线
 结合斯涅耳的发现，我们可以把光的\textbf{折射定律}表述
 如下：
 
-（1）折射光线在入射光线和法线所在的平面上，
-折射光线和入射光线分居在法线的两侧；
+（1）\textit{折射光线在入射光线和法线所在的平面上，
+折射光线和入射光线分居在法线的两侧}；
 
-（2）入射角的正弦跟折射角的正弦之比为一常数，即
+（2）\textit{入射角的正弦跟折射角的正弦之比为一常数}，即
 \[\frac{\sin i}{\sin r}=\text{常数}\]
 
 
